# pure-vcs

./: LICENSE  README.md  stack.yaml
hw2/: README.md  hw2.cabal
hw2/src/: Parser.hs
hw2/test/: ParserTests.hs
hw2/testFolder/Root/BigHouse/: HouseHolder.txt
onSave/testFolder/Root/BigHouse/flat1/: Flat.txt  cat.txt
vcs/: README.md  vcs.cabal
vcs/app/: Main.hs
vcs/src/: Directory.hs  File.hs  Launcher.hs  WorkingEnvironment.hs
vcs/test/: CommandTests.hs  Spec.hs
vcs/testFolder/Root/: EatFile.txt
vcs/testFolder/Root/BigHouse/flat2/: Flat.txt
