name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com/fp-ctd-itmo/hw2-niki999922/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Nikita
maintainer:          niki999922@yandex.ru
copyright:           2020 Nikita

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

executable hw2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw2
                     , directory
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     File, Directory, Launcher, WorkingEnvironment, Parser
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , mtl
                     , transformers
                     , directory
                     , time
                     , filepath
                     , text
                     , split
                     , sort
  default-language:    Haskell2010

test-suite hw2-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hw2
                     , hspec
                     , QuickCheck
                     , directory
                     , filepath
                     , text
                     , transformers
                     , time
                     , split
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  other-modules:       CommandTests, ParserTests
  default-language:    Haskell2010
  build-tool-depends:  hspec-discover:hspec-discover